--- a/VolleyScoreKeeper_middle/app/src/main/res/layout/volley_match_container.xml
+++ b/VolleyScoreKeeper_middle/app/src/main/res/layout/volley_match_container.xml
@@ -5,4 +5,9 @@
     android:layout_height="match_parent"
     android:baselineAligned="false">
 
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vpPager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </android.support.v4.view.ViewPager>
 </FrameLayout>
