--- a/VolleyScoreKeeper_middle/app/src/main/res/layout/edit_line_up.xml
+++ b/VolleyScoreKeeper_middle/app/src/main/res/layout/edit_line_up.xml
@@ -56,6 +56,12 @@
                         android:layout_marginLeft="20dp"
                         android:maxLength="2"
                         />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_missing_field"
+                        android:layout_margin="4dp"
+                        android:visibility="invisible"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -73,6 +79,12 @@
                         android:layout_marginLeft="20dp"
                         android:maxLength="2"
                         />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_missing_field"
+                        android:layout_margin="4dp"
+                        android:visibility="invisible"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -90,6 +102,12 @@
                         android:layout_marginLeft="20dp"
                         android:maxLength="2"
                         />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_missing_field"
+                        android:layout_margin="4dp"
+                        android:visibility="invisible"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -107,6 +125,12 @@
                         android:layout_marginLeft="20dp"
                         android:maxLength="2"
                         />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_missing_field"
+                        android:layout_margin="4dp"
+                        android:visibility="invisible"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -124,6 +148,12 @@
                         android:layout_marginLeft="20dp"
                         android:maxLength="2"
                         />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_missing_field"
+                        android:layout_margin="4dp"
+                        android:visibility="invisible"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -141,6 +171,12 @@
                         android:layout_marginLeft="20dp"
                         android:maxLength="2"
                         />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_missing_field"
+                        android:layout_margin="4dp"
+                        android:visibility="invisible"/>
                 </LinearLayout>
 
             </LinearLayout>
@@ -183,6 +219,12 @@
                         android:layout_marginLeft="20dp"
                         android:maxLength="2"
                         />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_missing_field"
+                        android:layout_margin="4dp"
+                        android:visibility="invisible"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -200,6 +242,12 @@
                         android:layout_marginLeft="20dp"
                         android:maxLength="2"
                         />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_missing_field"
+                        android:layout_margin="4dp"
+                        android:visibility="invisible"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -217,6 +265,12 @@
                         android:layout_marginLeft="20dp"
                         android:maxLength="2"
                         />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_missing_field"
+                        android:layout_margin="4dp"
+                        android:visibility="invisible"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -234,6 +288,12 @@
                         android:layout_marginLeft="20dp"
                         android:maxLength="2"
                         />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_missing_field"
+                        android:layout_margin="4dp"
+                        android:visibility="invisible"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -251,6 +311,12 @@
                         android:layout_marginLeft="20dp"
                         android:maxLength="2"
                         />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_missing_field"
+                        android:layout_margin="4dp"
+                        android:visibility="invisible"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -269,6 +335,12 @@
                         android:layout_marginLeft="20dp"
                         android:maxLength="2"
                         />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_missing_field"
+                        android:layout_margin="4dp"
+                        android:visibility="invisible"/>
                 </LinearLayout>
             </LinearLayout>
 
