--- a/VolleyScoreKeeper_middle/app/src/main/res/layout/current_line_up.xml
+++ b/VolleyScoreKeeper_middle/app/src/main/res/layout/current_line_up.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <TextView
         android:id="@+id/lineup_name_a"
         android:layout_width="match_parent"
@@ -11,7 +12,7 @@
         android:layout_alignParentTop="true"
         android:gravity="center"
         android:textSize="20sp"
-        android:layout_margin="5dp"/>
+        android:layout_margin="10dp"/>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/current_lineup_fragment"
@@ -20,7 +21,9 @@
         android:background="@drawable/volleyball_court_vertical"
         android:orientation="vertical"
         android:layout_below="@id/lineup_name_a"
-        android:layout_above="@+id/lineup_name_b">
+        android:layout_above="@+id/lineup_name_b"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -169,6 +172,32 @@
 
 
     </RelativeLayout>
+    <ImageView
+        android:id="@+id/team_a_logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/ic_team_a_logo_placeholder"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:adjustViewBounds="true"
+        android:maxWidth="100dp"
+        android:maxHeight="100dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="10dp"
+        />
+    <ImageView
+        android:id="@+id/team_b_logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/ic_team_b_logo_placeholder"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:adjustViewBounds="true"
+        android:maxWidth="100dp"
+        android:maxHeight="100dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="10dp"/>
+
     <TextView
         android:id="@+id/lineup_name_b"
         android:layout_width="match_parent"
@@ -177,5 +206,5 @@
         android:layout_alignParentBottom="true"
         android:gravity="center"
         android:textSize="20sp"
-        android:layout_margin="5dp"/>
+        android:layout_margin="10dp"/>
 </RelativeLayout>
