--- a/VolleyScoreKeeper_middle/app/src/main/res/layout/game_list_item.xml
+++ b/VolleyScoreKeeper_middle/app/src/main/res/layout/game_list_item.xml
@@ -50,6 +50,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/team_a_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -74,6 +75,7 @@
             android:textSize="28sp" />
 
         <ImageView
+            android:id="@+id/team_b_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
