added gym position, modified db, view and released

--- a/VolleyScoreKeeper_middle/app/src/main/res/layout/app_bar_main.xml
+++ b/VolleyScoreKeeper_middle/app/src/main/res/layout/app_bar_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.android.ferno92.volleyscorekeeper.com.provehitoIA.ferno92.volleyscorekeeper.homepage.MainActivity">
+    tools:context="com.provehitoIA.ferno92.volleyscorekeeper.homepage.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
