--- a/VolleyScoreKeeper_middle/app/src/main/res/layout/volley_match.xml
+++ b/VolleyScoreKeeper_middle/app/src/main/res/layout/volley_match.xml
@@ -2,6 +2,7 @@
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
@@ -160,11 +161,12 @@
                             android:maxWidth="50dp"/>
                     </LinearLayout>
 
-                    <ImageButton
+                    <android.support.v7.widget.AppCompatImageButton
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="8dp"
-                        android:backgroundTint="@color/colorAccent"
+                        app:backgroundTint="@color/colorAccent"
+                        tools:backgroundTint="@color/colorAccent"
                         android:onClick="addOneForTeam"
                         android:paddingBottom="12dp"
                         android:paddingTop="12dp"
@@ -182,11 +184,12 @@
                         android:textColor="#000000"
                         android:textSize="56sp" />
 
-                    <ImageButton
+                    <android.support.v7.widget.AppCompatImageButton
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="8dp"
-                        android:backgroundTint="@color/colorAccent"
+                        app:backgroundTint="@color/colorAccent"
+                        tools:backgroundTint="@color/colorAccent"
                         android:onClick="removeOneForTeam"
                         android:paddingBottom="12dp"
                         android:paddingTop="12dp"
@@ -233,11 +236,12 @@
 
                     </LinearLayout>
 
-                    <ImageButton
+                    <android.support.v7.widget.AppCompatImageButton
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="8dp"
-                        android:backgroundTint="@color/colorAccent"
+                        app:backgroundTint="@color/colorAccent"
+                        tools:backgroundTint="@color/colorAccent"
                         android:onClick="addOneForTeam"
                         android:paddingBottom="12dp"
                         android:paddingTop="12dp"
@@ -255,11 +259,12 @@
                         android:textColor="#000000"
                         android:textSize="56sp" />
 
-                    <ImageButton
+                    <android.support.v7.widget.AppCompatImageButton
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="8dp"
-                        android:backgroundTint="@color/colorAccent"
+                        app:backgroundTint="@color/colorAccent"
+                        tools:backgroundTint="@color/colorAccent"
                         android:onClick="removeOneForTeam"
                         android:paddingBottom="12dp"
                         android:paddingTop="12dp"
@@ -421,39 +426,42 @@
             </LinearLayout>
         </LinearLayout>
 
-        <Button
+        <android.support.v7.widget.AppCompatButton
             android:id="@+id/restart_set_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="32dp"
-            android:backgroundTint="#2962FF"
+            app:backgroundTint="@color/colorPrimary"
+            tools:backgroundTint="@color/colorPrimary"
             android:onClick="resetScore"
             android:text="Restart Set"
             android:textColor="#FFFFFF" />
 
-        <Button
+        <android.support.v7.widget.AppCompatButton
             android:id="@+id/restart_game_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="32dp"
-            android:backgroundTint="@color/colorPrimary"
+            app:backgroundTint="@color/colorPrimary"
+            tools:backgroundTint="@color/colorPrimary"
             android:onClick="resetGame"
             android:text="Restart Game"
             android:textColor="#FFFFFF"
             android:visibility="invisible" />
 
-        <Button
+        <android.support.v7.widget.AppCompatButton
             android:id="@+id/save_game_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="32dp"
-            android:backgroundTint="@color/colorPrimary"
+            app:backgroundTint="@color/colorPrimary"
+            tools:backgroundTint="@color/colorPrimary"
             android:onClick="saveMatch"
             android:text="Save Game"
             android:textColor="#FFFFFF"
