--- a/VolleyScoreKeeper_middle/app/src/main/res/layout/match_info.xml
+++ b/VolleyScoreKeeper_middle/app/src/main/res/layout/match_info.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -112,27 +114,30 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center">
-            <Button
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/get_gym_position"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_alignParentBottom="true"
                 android:text="Get Gym position"
                 android:layout_margin="5dp"
-                android:backgroundTint="@color/colorAccent"
+                app:backgroundTint="@color/colorAccent"
+                tools:backgroundTint="@color/colorAccent"
                 android:onClick="getLocation"
                 />
         </LinearLayout>
     </LinearLayout>
-    <Button
+    <android.support.v7.widget.AppCompatButton
+        android:id="@+id/start_new_match"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         android:text="Start new match"
         android:layout_margin="15dp"
-        android:onClick="startNewMatch"
-        android:backgroundTint="@color/colorPrimary"
+        app:backgroundTint="@color/colorPrimary"
+        tools:backgroundTint="@color/colorPrimary"
         android:textColor="#FFFFFF"
         />
 
